--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,14 @@
       <version>1.2.14</version>
     </dependency>
     <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20070829</version>
+    </dependency>
+    <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
       <version>3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jyaml</groupId>
-      <artifactId>jyaml</artifactId>
-      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
